changed education, added projects

--- a/style.css
+++ b/style.css
@@ -42,6 +42,33 @@ body {
     background-color: beige;
     color: rgb(72, 2, 2);
 }
+.projectList {
+    list-style-type: none;
+    min-height: 50px;
+    padding: 0px 0;
+    text-align: center;
+    display: flex;
+    
+    
+    bottom: 0;
+    width: 100%;
+ 
+  }
+  .projectList li {
+    display: flex;
+    margin: 0vh 1vh;
+ 
+  }
+  .projectList a {
+    color: rgb(79, 2, 2);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-decoration: none;
+    vertical-align: middle;
+  }
+  .projectList a:hover {
+    color: rgb(221, 53, 53);
+    cursor: pointer;
+  }
 .mainHeader {
     height: 500px;
     
@@ -60,7 +87,7 @@ body {
     height: 5px;
 }
 .mainimage {   
-    transform: translate(-10%, 50%);
+    transform: translate(-10%, 0%);
     top: 20%;
     height: 40vh;
     width: 40vh;
